src/main/java/com/example/githubapicalls/errors/exceptionHandling/ApiError.java
package com.example.githubapicalls.errors.exceptionHandling;
public record ApiError(Integer status, String message) {
}
